# RAG_AI-py

./: .editorconfig  .gitignore  ARCHITECTURE.md  CHANGELOG.md  PROJECT_PRINCIPLES.md  README.md  docker-compose.yml
backend/: check_docs.py  check_embed.py  flush_vectors.py  pyproject.toml  test_fuzzy.py  test_greeting.py  test_keyword.py  test_out.txt  test_phase8_pipeline.py  test_pipeline.py  test_profanity.py  test_rag.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chat.py  documents.py  health.py  reindex.py
backend/app/chunkers/: semantic_chunker.py
backend/app/cleaners/: text_cleaners.py
backend/app/configs/: __init__.py  aliases.py  common.py  goodbyes.py  greetings.py  knowledge.py  normalization.py  responses.py  small_talk.py  thanks.py
backend/app/core/: settings.py
backend/app/database/: models.py  session.py
backend/app/embeddings/: embedding_service.py
backend/app/engines/: __init__.py  alias.py  clarification_engine.py  conversational_resolution_engine.py  empty_input.py  extractive_composer.py  fallback.py  formatter.py  gibberish.py  goodbye.py  greeting.py  knowledge_engine.py  llm_generator.py  normalization.py  profanity.py  providers_legacy.py  query_decision_engine.py  query_understanding.py  thanks.py  (+4 more)
backend/benchmarks/: architecture.json  comparison.json  fact_lookup.json  workflow.json
backend/scripts/: check_chunks.py  check_ingestion.py  expand_tests.py  migrate_db.py  test_api_client.py  test_chat.py  test_generation.py  test_import.py  test_retriever.py
backend/tests/: test_production_suite.py  test_regression.py  test_regression_qa.py
(+129 files in other folders)
