[project]
name = "mobiloitte-ai-platform"
version = "1.0.0"
description = "Deterministic Conversation Intelligence Platform — Python Edition"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13.0",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.2.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "markdown>=3.6",
    "tiktoken>=0.7.0",
    "python-multipart>=0.0.32",
    "google-genai>=2.11.0",
    "google-generativeai>=0.8.2",
    "python-dotenv>=1.2.2",
    "tenacity>=9.1.4",
    "numpy<2",
    "transformers<4.40.0",
    "torch==2.2.2",
    "asyncpg>=0.31.0",
    "rapidfuzz>=3.14.5",
    "markdown-it-py>=4.2.0",
    "pymupdf4llm==0.0.17",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }


[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
    "black>=24.0",
    "ruff>=0.5.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
